Try to fix weird color of fancy button on iOS's WeChat

--- a/app/assets/stylesheets/views/thing_lists.css.scss
+++ b/app/assets/stylesheets/views/thing_lists.css.scss
@@ -223,6 +223,7 @@ html.thing_lists_show {
             }
           }
 
+          .fa-heart-o,
           .fanciers_count {
             color: $red;
           }
